--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <nav>
         <ul>
-            <li><a href="Final PT Homepage.html">Homepage</a></li>
+            <li><a href="index.html">Homepage</a></li>
             <li><a href="Final PT Charity List.html">Charities List</a></li>
             <li><a href="Final PT Charity Profile.html">Charity Profile</a></li>
         </ul>
