Submission for Part 3

--- a/index.html
+++ b/index.html
@@ -3,59 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>HelpHub Homepage</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-        }
-
-        header, nav, footer {
-            background-color: #f2f2f2;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #333;
-        }
-
-        #container {
-            padding: 20px;
-        }
-
-        .picture-box {
-            border: 2px solid #ccc;
-            padding: 10px;
-            margin-bottom: 20px;
-            text-align: center;
-            transition: transform 0.3s ease;
-        }
-
-        .picture-box:hover {
-            transform: scale(1.05);
-            border-color: #333;
-        }
-
-        .picture-box img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        footer {
-            background-color: #f2f2f2;
-            text-align: center;
-            padding: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -66,8 +15,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Homepage</a></li>
-            <li><a href="Final PT Charity List.html">Charities List</a></li>
-            <li><a href="Final PT Charity Profile.html">Charity Profile</a></li>
+            <li><a href="charities.html">Charities List</a></li>
+            <li><a href="charity_profile.html">Charity Profile</a></li>
         </ul>
     </nav>
 
