--- a/charities.html
+++ b/charities.html
@@ -26,11 +26,11 @@
             <p> HelpHub works with these charities to give back to their communities.</p>
 
             <ul>
-                <li><a href="Final PT Charity Profile.html" target="_blank">Holy Angels</a></li>
-                <li><a href="Final PT Charity Profile.html" target="_blank">Ronald McDonald House Charities</a></li>
-                <li><a href="Final PT Charity Profile.html" target="_blank">Belmont Community Organization</a></li>
-                <li><a href="Final PT Charity Profile.html" target="_blank">American Red Cross</a></li>
-                <li><a href="Final PT Charity Profile.html" target="_blank">Make-A-Wish Foundation</a></li>
+                <li><a href="charity_profile.html" target="_blank">Holy Angels</a></li>
+                <li><a href="charity_profile.html" target="_blank">Ronald McDonald House Charities</a></li>
+                <li><a href="charity_profile.html" target="_blank">Belmont Community Organization</a></li>
+                <li><a href="charity_profile.html" target="_blank">American Red Cross</a></li>
+                <li><a href="charity_profile.html" target="_blank">Make-A-Wish Foundation</a></li>
             </ul>
         </main>
     </div>
